# Meta-x-Scalar-Hackathon

./: Dockerfile  README.md  emails.json  inference.py  main.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  triage_grader.py  triage_grader_v2.py
data/: emails.json
server/: app.py
