[project]
name = "email-triage-env"
version = "1.0.0"
description = "An OpenEnv environment where an AI agent learns to triage emails by assigning priority, category, and routing them to the correct team."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Code Catalyst"},
]
dependencies = [
    "fastapi==0.115.6",
    "uvicorn[standard]==0.34.0",
    "pydantic==2.10.6",
    "openai==1.65.0",
    "requests==2.32.3",
    "python-dotenv",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"
